2002-11-25    <karl@gnu.org>

	* strtoll.c: copy from libc, meaning we now #include <strtol.c>
	instead of "strtol.c".

2002-11-25  Jim Meyering  <jim@meyering.net>

	* mktime.c: Sync from libc, now that it has the latest fix.

2002-11-24    <karl@gnu.org>

	* error.c, getopt.c, getopt.h, getopt1.c, obstack.c, regex.c,
	regex.h, strdup.c, strtoll.c, tempname.c: change license to gpl.

2002-11-24  Jim Meyering  <jim@meyering.net>

	Update from coreutils:

	* mktime.c: Merge in changes from libc.

	Avoid a link-time failure on some Linux systems.
	* mktime.c (STATIC): Define to be empty (_LIBC) or `static' (otherwise).
	(__mon_yday): Declare with the STATIC attribute.
	(__mktime_internal): Likewise.
	Based on a report from Greg Schafer.

2002-11-23  Jim Meyering  <jim@meyering.net>

	* sig2str.c (str2signum, sig2str): Avoid a warning from gcc:
	Use `unsigned', not `int', as type of index.

	* xstat.in [@BEGIN_LSTAT_ONLY@]: Include <string.h>.

	* fsusage.c: Remove unneeded parentheses around operands of `defined'.

2002-11-22  Paul Eggert  <eggert@twinsun.com>

	* hash.c: Avoid use of <assert.h>, as the GNU Coding Standards
	hint that one should use `if (! x) abort ();' rather than `assert
	(x);', and anyway it's one less thing to worry about configuring.
	(hash_lookup, hash_get_first, hash_get_next, hash_find_entry,
	hash_rehash, hash_insert): Use abort rather than assert.

2002-11-22  Paul Eggert  <eggert@twinsun.com>

	* quotearg.h: Allow multiple inclusion by surrounding with
	"#ifndef QUOTEARG_H_".  Include <stddef.h>, for size_t,
	so that we can be included first.
	(PARAMS): Remove; we now assume C89 or later.  All uses removed.
	* quotearg.c: Include quotearg.h immediately after config.h.
	No need to include stddef.h or sys/types.h any more.
	Surround local include files with "", not "<>".
	Assume HAVE_LIMITS_H unconditionally, as we assume C89.
	Similarly, assume HAVE_C_BACKSLASH_A, CHAR_BIT, UCHAR_MAX, UINT_MAX,
	HAVE_STDLIB_H, HAVE_STRING_H, STDC_HEADERS.