@@ -1,4 +1,4 @@
-# $Id: srclist.txt,v 1.10 2002-11-25 22:24:53 karl Exp $
+# $Id: srclist.txt,v 1.11 2002-11-26 22:58:57 karl Exp $
 # Files for which we are not the source.  See ./srclistvars.sh for the
 # variable definitions.
 
@@ -26,7 +26,7 @@ $LIBCSRC/sysdeps/generic/strtoll.c	lib gpl
 $LIBCSRC/posix/getopt.h			lib gpl
 $LIBCSRC/posix/getopt1.c		lib gpl
 $LIBCSRC/posix/regex.h			lib gpl
-#$LIBCSRC/string/strdup.c		lib gpl
+$LIBCSRC/string/strdup.c		lib gpl
 $LIBCSRC/time/mktime.c			lib gpl
 #
 # - libc/sysdeps/generic has memcpy.c, memmove.c, strcasecmp.c, but they
