@@ -9,3 +9,4 @@ md5.h
 obstack.h
 regex.c
 regex.h
+strdup.c
